--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,11 @@ dependencies {
 
     //Image downloading
     implementation 'com.github.bumptech.glide:glide:4.3.1'
+    implementation 'jp.wasabeef:glide-transformations:3.0.1'
 
     //Persistance
     implementation "android.arch.persistence.room:runtime:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+
+
 }
