--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".userdetail.UserDetailActivity">
-        </activity>
+        <activity android:name=".userdetail.UserDetailActivity" />
     </application>
 
 </manifest>
